# mtrn4231-klotski-solver

./: .gitignore  README.md  camera.sh  setupFakeur5e.sh  system_architecture.drawio
launch/: demo.launch.py
src/dashboard_app/: .gitignore  eslint.config.mjs  package-lock.json  package.json
src/dashboard_app/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/dashboard_app/log/: latest_build
src/dashboard_app/public/data/: possible_combinations.json
src/dashboard_app/src/app/: layout.tsx  page.tsx
src/dashboard_app/src/components/: ControlPanel.tsx  GoalEditor.tsx  ROSProvider.tsx
src/dashboard_app/src/components/GoalEditor/: DraggableBlock.tsx  GoalEditor.tsx  Grid.tsx  Legend.tsx  constants.ts  hooks.ts  index.tsx  types.ts
src/dashboard_app/src/components/GoalEditor/hooks/: index.ts  useBlockMovement.tsx  usePatternValidation.tsx  useRandomPattern.ts
src/dashboard_app/src/components/GoalEditor/utils/: geometry.ts  pattern-conversion.ts
src/dashboard_app/src/components/ui/: badge.tsx  button.tsx  card.tsx  scroll-area.tsx  separator.tsx  tooltip.tsx
src/dashboard_app/src/lib/ros/: context.tsx  index.ts  provider.tsx  types.ts  useROSConnection.ts  useROSPublishers.ts  utils.ts
src/dashboard_app/src/lib/ros/hooks/: index.ts  useROSPublishers.ts  useROSSubscribers.ts
src/dashboard_app/src/lib/ros/types/: board-spec.msg.ts  board.msg.ts  cell.msg.ts  index.ts  piece.msg.ts  ui-command.msg.ts
src/dashboard_app/src/lib/utils/: index.ts
src/dashboard_app/src/types/goal-editor/: index.ts
src/dashboard_app/src/utils/: common.ts  geometry.ts  pattern-conversion.ts
src/klotski_interfaces/: CMakeLists.txt  package.xml
src/klotski_interfaces/action/: GripPiece.action  MovePiece.action
src/klotski_interfaces/msg/: Board.msg  BoardSpec.msg  BoardState.msg  Cell.msg  ContactState.msg  GripperCommand.msg  Move.msg  MoveList.msg  Piece.msg  UICommand.msg
src/klotski_interfaces/srv/: CaptureBoard.srv  SolveBoard.srv
src/launch/: demo.launch.py  klotski.launch.py
src/pkg_brain/: package.xml  setup.cfg  setup.py
src/pkg_brain/launch/: brain.launch.py
src/pkg_brain/pkg_brain/: context.py  task_brain.py  task_brain_node.py  ui_modes.py
src/pkg_brain/pkg_brain/handlers/: __init__.py  base.py  execute.py  plan.py  sense.py  status.py
src/pkg_brain/pkg_brain/managers/: __init__.py  action_executor.py  pipeline_orchestrator.py  service_manager.py  ui_manager.py
src/pkg_manipulation/: CMakeLists.txt  GRIPPER_TESTING_GUIDE.md  package.xml  setup.cfg  setup.py
src/pkg_manipulation/config/: arm.config.yaml  arm_manipulator.config.yaml  gripper.config.yaml
src/pkg_manipulation/launch/: manipulation.launch.py  test_gripper.launch.py
src/pkg_manipulation/pkg_manipulation/: __init__.py  grip_manip.py  manual_gripper_control.py  test_gripper_client.py  validate_gripper.py
src/pkg_manipulation/pkg_manipulation/arm/include/: arm_manipulator.hpp
src/pkg_manipulation/pkg_manipulation/arm/src/: arm_manipulator.cpp
src/pkg_manipulation/pkg_manipulation/gripper/: gripper_manipulator.py
src/pkg_manipulation/scripts/: manual_gripper_control.py
src/pkg_plan/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/pkg_plan/include/pkg_plan/: klotski_solver.hpp  solve_service_node.hpp
src/pkg_plan/launch/: plan.launch.py
src/pkg_plan/pkg_plan/: plan.py
src/pkg_plan/src/: convert_types.py  klotski_solver.cpp  solve_cli.cpp  solve_service.cpp  solve_service_node.cpp
src/pkg_sense/: package.xml  setup.cfg  setup.py
src/pkg_sense/pkg_sense/: mock_sense_node.py
src/pkg_ui/: package.xml  setup.cfg  setup.py
src/ur5eMoveit/: CMakeLists.txt  message.txt  package.xml
src/ur5eMoveit/launch/: move_to_marker.launch.py
src/ur5eMoveit/src/: move_to_marker.cpp
