<?xml version="1.0"?>
<package format="3">
  <name>pkg_brain</name>
  <version>0.0.1</version>
  <description>Klotski orchestrator (state machine)</description>
  <maintainer email="alanchoi.uni@gmail.com">mtrn</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>klotski_interfaces</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
